fix side bar has double scrollbar issue. add hamburger link

--- a/src/components/side-bar/style.module.scss
+++ b/src/components/side-bar/style.module.scss
@@ -6,18 +6,19 @@ $sidebar-width:200px;
   width: $sidebar-width;
   background-color: #2b2c30;
   z-index: 9;
-  height: auto;
   position: relative;
   left: 0;
   top: 0;
   transition: all .3s ease-out;
-
+  display: flex !important;
+  flex-direction: column;
+  height: 100vh;
 
   .logoOuter {
     display: flex;
     justify-content: center;
+    min-height: 60px;
     padding: 16px 0;
-    margin-bottom: 45px;
     background-color: theme-color("bhp-orange-1");
   }
 
@@ -37,7 +38,8 @@ $sidebar-width:200px;
 
   .entries {
     overflow: auto;
-    height: calc( 100vh - 60px);
+    flex-grow: 1;
+    height: auto;
   }
 }
 
